# Redactify

./: README.md  pyproject.toml
redactify/: main.py
